<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="4dp"
    android:background="?attr/colorBackground"
    app:cardCornerRadius="4dp">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_onProfPic"
            android:layout_width="45dp"
            android:layout_height="45dp"
            app:cardCornerRadius="26dp">

            <ImageView
                android:id="@+id/profileImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@drawable/profile_pic" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/card_onProfPic"
            android:text="@string/username_text"
            android:textColor="?attr/colorText"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@+id/username"
            android:text="@string/desc_text"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/time_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/card_onProfPic"
            android:layout_marginStart="8dp"
            android:layout_below="@+id/username"
            android:text="@string/timeComm"
            android:textSize="12sp" />

    </RelativeLayout>

</LinearLayout>