<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:animateLayoutChanges="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grad_bg">


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/icon_insta"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true">
        </ImageView>

        <RelativeLayout
            android:id="@+id/rellay1"
            android:layout_width="wrap_content"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo">

            <TextView
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/login_text"
                android:textSize="30sp"
                android:textColor="@color/colorText"
                android:fontFamily="sans-serif-medium">
            </TextView>

            <LinearLayout
                android:id="@+id/linlay1"
                android:layout_below="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email_text"
                        android:textAllCaps="true"
                        android:textSize="15sp"
                        android:fontFamily="sans-serif-light"
                        android:textColor="@color/colorText" />

                    <EditText
                        android:id="@+id/login_email"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:textSize="15sp"
                        android:textColor="@color/colorText"
                        android:fontFamily="sans-serif-light"
                        android:paddingStart="15dp"
                        android:paddingEnd="15dp"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/et_bg"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="23dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pass_text"
                        android:textAllCaps="true"
                        android:textSize="15sp"
                        android:fontFamily="sans-serif-light"
                        android:textColor="@color/colorText" />

                    <EditText
                        android:id="@+id/login_pass"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:textSize="15sp"
                        android:inputType="numberPassword"
                        android:textColor="@color/colorText"
                        android:fontFamily="sans-serif-light"
                        android:paddingStart="15dp"
                        android:paddingEnd="15dp"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/et_bg"/>
                </LinearLayout>
            </LinearLayout>

            <Button
                android:onClick="getLoginUser"
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_below="@id/linlay1"
                android:text="@string/login_text"
                android:textAllCaps="false"
                android:fontFamily="sans-serif"
                android:background="@drawable/btn_bg"
                android:paddingStart="70dp"
                android:paddingEnd="70dp"
                android:textSize="16sp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"/>


        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rellay2"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/btn_signUp"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@color/transparent"
            android:text="@string/sing_up"
            android:textAllCaps="true"
            android:textColor="@color/colorText"
            android:fontFamily="sans-serif"/>
    </RelativeLayout>

</RelativeLayout>